windows/oxtelegram/oxtelegram.h

/* Code generated by cmd/cgo; DO NOT EDIT. */

/* package oxtelegram/cshared */


#line 1 "cgo-builtin-export-prolog"

#include <stddef.h>

#ifndef GO_CGO_EXPORT_PROLOGUE_H
#define GO_CGO_EXPORT_PROLOGUE_H

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef struct { const char *p; ptrdiff_t n; } _GoString_;
extern size_t _GoStringLen(_GoString_ s);
extern const char *_GoStringPtr(_GoString_ s);
#endif

#endif

/* Start of preamble from import "C" comments.  */


#line 8 "main.go"

#include <stdint.h>
#include <stdlib.h>

typedef void (*ox_auth_sink)(const char* kind, const char* qr_login_url, const char* password_hint, const char* error_message);

static void ox_auth_sink_invoke(ox_auth_sink fn, const char* a, const char* b, const char* c, const char* d) {
	if (fn) fn(a, b, c, d);
}

#line 1 "cgo-generated-wrapper"

#line 25 "stream_cb.go"

#include <stdint.h>

typedef int64_t (*mpv_stream_cb_read_fn)(void *cookie, char *buf, uint64_t nbytes);
typedef int64_t (*mpv_stream_cb_seek_fn)(void *cookie, int64_t offset);
typedef int64_t (*mpv_stream_cb_size_fn)(void *cookie);
typedef void (*mpv_stream_cb_close_fn)(void *cookie);
typedef void (*mpv_stream_cb_cancel_fn)(void *cookie);

typedef struct mpv_stream_cb_info {
	void *cookie;
	mpv_stream_cb_read_fn read_fn;
	mpv_stream_cb_seek_fn seek_fn;
	mpv_stream_cb_size_fn size_fn;
	mpv_stream_cb_close_fn close_fn;
	mpv_stream_cb_cancel_fn cancel_fn;
} mpv_stream_cb_info;

// Forward declarations of the Go functions exported further down this file — needed so
// ox_stream_fill_info can reference their addresses before cgo has generated _cgo_export.h.
// Signatures here must exactly match the //export'd Go function signatures below.
extern int64_t ox_stream_read_fn(void *cookie, char *buf, uint64_t nbytes);
extern int64_t ox_stream_seek_fn(void *cookie, int64_t offset);
extern int64_t ox_stream_size_fn(void *cookie);
extern void ox_stream_close_fn(void *cookie);
extern void ox_stream_cancel_fn(void *cookie);

static void ox_stream_fill_info(mpv_stream_cb_info *info, void *cookie) {
	info->cookie = cookie;
	info->read_fn = ox_stream_read_fn;
	info->seek_fn = ox_stream_seek_fn;
	info->size_fn = ox_stream_size_fn;
	info->close_fn = ox_stream_close_fn;
	info->cancel_fn = ox_stream_cancel_fn;
}

#line 1 "cgo-generated-wrapper"


/* End of preamble from import "C" comments.  */


/* Start of boilerplate cgo prologue.  */
#line 1 "cgo-gcc-export-header-prolog"

#ifndef GO_CGO_PROLOGUE_H
#define GO_CGO_PROLOGUE_H

typedef signed char GoInt8;
typedef unsigned char GoUint8;
typedef short GoInt16;
typedef unsigned short GoUint16;
typedef int GoInt32;
typedef unsigned int GoUint32;
typedef long long GoInt64;
typedef unsigned long long GoUint64;
typedef GoInt64 GoInt;
typedef GoUint64 GoUint;
typedef size_t GoUintptr;
typedef float GoFloat32;
typedef double GoFloat64;
#ifdef _MSC_VER
#if !defined(__cplusplus) || _MSVC_LANG <= 201402L
#include <complex.h>
typedef _Fcomplex GoComplex64;
typedef _Dcomplex GoComplex128;
#else
#include <complex>
typedef std::complex<float> GoComplex64;
typedef std::complex<double> GoComplex128;
#endif
#else
typedef float _Complex GoComplex64;
typedef double _Complex GoComplex128;
#endif

/*
  static assertion to make sure the file is being used on architecture
  at least with matching size of GoInt.
*/
typedef char _check_for_64_bit_pointer_matching_GoInt[sizeof(void*)==64/8 ? 1:-1];

#ifndef GO_CGO_GOSTRING_TYPEDEF
typedef _GoString_ GoString;
#endif
typedef void *GoMap;
typedef void *GoChan;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;

#endif

/* End of boilerplate cgo prologue.  */

#ifdef __cplusplus
extern "C" {
#endif

extern __declspec(dllexport) char* ox_last_error(void);
extern __declspec(dllexport) void ox_free(char* p);
extern __declspec(dllexport) int ox_configure(int apiID, char* apiHash, char* sessionPath, char* cachePath, ox_auth_sink sink);
extern __declspec(dllexport) char* ox_current_auth_kind(void);
extern __declspec(dllexport) char* ox_current_auth_qr(void);
extern __declspec(dllexport) char* ox_current_auth_hint(void);
extern __declspec(dllexport) char* ox_current_auth_error(void);
extern __declspec(dllexport) int ox_submit_phone(char* phone);
extern __declspec(dllexport) int ox_submit_bot_token(char* token);
extern __declspec(dllexport) int ox_submit_code(char* code);
extern __declspec(dllexport) int ox_submit_password(char* password);
extern __declspec(dllexport) int ox_request_qr(void);
extern __declspec(dllexport) int ox_logout(void);

// providerBotID/messageID come from the PlaybackInfo Path (oxplayer-tg://{botId}/{msgId}); both are
// 0 when the backend has nothing remembered and a fresh copy is in flight, in which case locator —
// the ?loc= query param — is what identifies the incoming copy. See
// oxtelegram.Client.ResolveVideoFile.
//
extern __declspec(dllexport) char* ox_start_playback(int64_t providerBotID, int64_t messageID, char* locatorC);

// ox_stream_uri_for_current_playback returns "gotdstream://<id>" for the currently active
// playback session set up by ox_start_playback (or NULL if none) — the URL to hand mpv's
// loadfile when using the stream_cb path (see stream_cb.go) instead of ox_start_playback's HTTP
// loopback URL. Both point at the same registered session; callers pick one transport per
// mpv.Player, they are not meant to be mixed for a single load.
//
extern __declspec(dllexport) char* ox_stream_uri_for_current_playback(void);

// ox_delivery_message_id_for_locator returns the DM message id this session read for locator, or 0.
// Pairs with ox_delivery_provider_bot_id_for_locator: the Dart caller reports both to the backend
// (POST /me/telegram-delivery) so the next play of the same file needs no Telegram copy at all.
// Only the receiving side can know either — private-chat ids are numbered per side, and the server
// round-robins across senders so it does not know which one won.
//
extern __declspec(dllexport) int64_t ox_delivery_message_id_for_locator(char* locatorC);

// ox_delivery_provider_bot_id_for_locator returns the delivery bot whose DM held locator, or 0.
//
extern __declspec(dllexport) int64_t ox_delivery_provider_bot_id_for_locator(char* locatorC);

// ox_arm_delivery_waiter registers interest in locator before the delivery request is sent, so a
// copy that arrives while PlaybackInfo is still in flight is captured rather than raced for.
//
extern __declspec(dllexport) void ox_arm_delivery_waiter(char* locatorC);

// ox_warm_delivery resolves the delivery message and records its id WITHOUT opening a download —
// the warm-up path. Scrolling the dashboard warms a dozen titles at once, and starting a dozen
// progressive downloads for videos nobody pressed play on would spend the user's data on bytes that
// get thrown away. Resolving is enough: it makes the backend remember the id.
//
// Returns 0 on success, 1 on failure — the same convention as withAuth and every other status
// export here (ox_last_error carries the detail).
//
extern __declspec(dllexport) int ox_warm_delivery(int64_t providerBotID, int64_t messageID, char* locatorC);

// ox_ensure_provider_bots_ready starts, mutes and archives every delivery sender on this account so
// delivery copies never land in the user's visible inbox. botsJSON is the array returned by the
// backend's GET /telegram/provider-bots: [{"id":123,"username":"SomeBot"}].
//
// Returns 0 on success, 1 on failure — same convention as the other status exports.
//
extern __declspec(dllexport) int ox_ensure_provider_bots_ready(char* botsJSON);
extern __declspec(dllexport) int ox_stop_playback(char* sessionURI);
extern __declspec(dllexport) char* ox_fetch_webapp_init_data(char* bot, char* shortName, char* hostedURL, char* platform);

// ox_stream_open_fn matches mpv_stream_cb_open_ro_fn's signature exactly
// (int (*)(void *user_data, char *uri, mpv_stream_cb_info *info)). Pass the address of this
// function (looked up by symbol name from Dart) as the open_fn argument to
// mpv_stream_cb_add_ro. Only one playback session is live at a time today (see
// closePlaybackLocked's single-session note in main.go) — id must match the currently registered
// playbackFileID.
//
extern __declspec(dllexport) int ox_stream_open_fn(void* userData, char* uri, mpv_stream_cb_info* info);
extern __declspec(dllexport) int64_t ox_stream_read_fn(void* cookie, char* buf, uint64_t nbytes);
extern __declspec(dllexport) int64_t ox_stream_seek_fn(void* cookie, int64_t offset);
extern __declspec(dllexport) int64_t ox_stream_size_fn(void* cookie);
extern __declspec(dllexport) void ox_stream_close_fn(void* cookie);

// ox_stream_cancel_fn is called by mpv from a thread other than the one running
// read_fn/seek_fn specifically to interrupt a blocked call — must not block itself.
//
extern __declspec(dllexport) void ox_stream_cancel_fn(void* cookie);

#ifdef __cplusplus
}
#endif